--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
   <meta charset="utf-8">
   <title>Lapio website</title>
+  <h1>Hello </h1>
+  <p><strong>This is my website</strong></p>
+  <p>This is a piece of text</p>
+  <p><i>To be continued</i></p>
 </head>
 
 <body>
