Part 3, add third exercise

--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-  <meta charset="utf-8">
-  <title>Lapio website</title>
-  <h1>Hello </h1>
-  <p><strong>This is my website</strong></p>
-  <p>This is a piece of text</p>
-  <p><i>To be continued</i></p>
+<title>My Website</title>
 </head>
-
 <body>
-  <!--Do the exercises here-->
-</body>
 
+<h1>Hello</h1>
+
+<p>This is my website</p>
+
+<p><strong>Here</strong> I write about things that I find interesting</p>
+
+<p>Such as learning <em>HTML</em></p>
+
+<p><strong><em>To be continued...</em></strong></p>
+
+</body>
 </html>
+
