--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Hello</h1>
     <p>This is my website</p>
+    <p>You can find my other website <a href="other.html">here</a></p>
     <p>The learning goals for this course are in essence to</p>
     <ul>
         <li>Learn HTML
