--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Hello</h1>
     <p>This is my website</p>
-    <p>You can find my other website <a href="other.html">here</a></p>
+    <h2>You can find my other website <a href="other.html">here</a></h2>
     <p>The learning goals for this course are in essence to</p>
     <ul>
         <li>Learn HTML
@@ -29,8 +30,8 @@
     <p>Such as learning <strong>HTML</strong></p>
     
     <!-- Image of a man reading a newspaper -->
-    <img src="assets/reading.jpg" alt="Man reading a newspaper">
-    <br>Photo on <a href="https://freeforcommercialuse.net/image/man-reading-newspaper-royalty-3192">freeforcommercialuse.net</a>
+    <img src="assets/reading.jpg" alt="Man reading a newspaper" style="width: 500px;height: auto;"> 
+    
 
     <p>To be continued...</p>
 </body>
