Part 3, add eleventh exercise

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>My Website</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body id="indexPage">
     <h1>Hello</h1>
     <p>This is my website</p>
     <h2>You can find my other website <a href="other.html">here</a></h2>
@@ -31,7 +31,7 @@
     
     <!-- Image of a man reading a newspaper -->
     <img src="assets/reading.jpg" alt="Man reading a newspaper" style="width: 500px;height: auto;"> 
-    
+
 
     <p>To be continued...</p>
 </body>
